feat1-ui-commit

--- a/apps/web/src/app/globals.css
+++ b/apps/web/src/app/globals.css
@@ -19,3 +19,80 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.container-categories {
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  margin-top: 12px;
+}
+
+.button-group {
+  display: flex;
+  justify-content: center;
+  margin: 4vh;
+  gap: 8vh;
+  border: 20px;
+  border-color: #fc9247;
+  box-shadow: 12px;
+  max-width: 1272px;
+  overflow-x: auto;
+  overflow-y: hidden;
+  width: 100%;
+}
+
+.button {
+  background-color: #fff9f9;
+  color: #fc9247;
+  padding: 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  border: 2px solid #fc9247;
+  transition: background-color 0.5s ease;
+  width: 20vh;
+}
+
+.browse-by {
+  background-color: white;
+  color: #fc9247;
+  padding: 10px 10px;
+  border-radius: 5px;
+}
+
+.button:hover {
+  background-color: #fc9247;
+  color: black;
+}
+
+.event-jkt {
+  display: flex;
+  justify-content: center;
+  margin: 4vh auto;
+  gap: 8vh;
+  border: 20px;
+  border-color: #fc9247;
+  box-shadow: 12px;
+  max-width: 1272px;
+  overflow-x: auto;
+  overflow-y: hidden;
+}
+
+.card {
+  background-color: #fff9f9;
+  color: #fc9247;
+  padding: 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  border: 2px solid #fc9247;
+  transition: background-color 0.5s ease;
+}
+
+.buttonCarousel {
+  background-color: transparent;
+  color: #fc9247;
+  padding: 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  border: 2px solid #fc9247;
+  transition: background-color 0.5s ease;
+}
